# markdown-readtime

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: basic_usage.rs  custom_speed.rs
src/: lib.rs  utils.rs
