[package]
name = "markdown-readtime"
version = "0.1.0"
edition = "2024"
description = "A library to estimate reading time for Markdown content"
repository = "https://github.com/yourusername/markdown-readtime"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "reading-time", "readtime"]
categories = ["text-processing", "web-programming"]

[dependencies]
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]